Install into existing worlds.